--- a/TextInput/Views/MainWindow.axaml
+++ b/TextInput/Views/MainWindow.axaml
@@ -20,8 +20,24 @@
         <TextBox Text="{Binding SecondName}"></TextBox>
         <TextBox Text="{Binding Adress}"></TextBox>
         <TextBox Text="{Binding Repeat}"></TextBox>
-        <TextBlock Text="{Binding AllInfo}"></TextBlock>
         <Button Content="Click me" Command="{Binding WriteText}"></Button>
+        <ItemsControl ItemsSource="{Binding PersonList }">
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <Border Margin="0,10,0,0"
+                            CornerRadius="5"
+                            BorderBrush="Gray" BorderThickness="1"
+                            Padding="5">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBox Text="{Binding FirstName}"></TextBox>
+                            <TextBox Text="{Binding SecondName}"></TextBox>
+                            <TextBox Text="{Binding Adress}"></TextBox>
+                            <!-- <TextBox Text="{Binding DataType=models:Crockery, Path=(models:Crockery).Title}"></TextBox> -->
+                        </StackPanel>
+                    </Border>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
     </StackPanel>
 
 </Window>
